Fixed notification z-index

--- a/frontend/src/styles/NotificationProvider.module.scss
+++ b/frontend/src/styles/NotificationProvider.module.scss
@@ -24,6 +24,8 @@ $transitionStyle: $transitionDuration $transitionTimingFunction;
   top: 2rem;
   right: 50%;
   transform: translateX(50%);
+
+  z-index: 9000;
 }
 
 
